feat: Changes to string resources

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,5 +25,5 @@
     <string name="preferences_download_opts_hide_notif_summary_on">Download notifications will be hidden.</string>
     <string name="toast_delete_browsing_data">Browsing data has been deleted.</string>
     <string name="toast_sw_render_warn">Software rendering is enabled, performance may be slower.</string>
-    <string name="toast_restart_renderer">Make sure to restart when changing renderer!</string>
+    <string name="toast_restart_renderer">Restart the app to apply rendering changes.</string>
 </resources>
