feat: Use string resources instead of hardcoded strings for ActionBar titles

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name" translatable="false">Archo Browser</string>
+    <string name="actionbar_preferences_title">Settings</string>
+    <string name="actionbar_preferences_download_opts_title">Download Options</string>
     <string name="dialog_delete_data_title">Completely delete browsing data?</string>
     <string name="dialog_delete_data_message">Are you sure you want to delete all of your browsing data? You cannot undo this once deleted.</string>
     <string name="dialog_button_yes">Yes</string>
