feat: Changes to preferences UI; docs: Update README

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,24 +9,21 @@
     <string name="dialog_button_ok">@android:string/ok</string>
     <string name="dialog_button_cancel">@android:string/cancel</string>
     <string name="preferences_category_web">Web</string>
-    <string name="preferences_item_renderer">Renderer</string>
-    <string name="preferences_item_sw_render">Use software rendering</string>
+    <string name="preferences_sw_render">Use software rendering</string>
+    <string name="preferences_sw_render_summary_on">Enabled, performance might be slow.</string>
     <string name="preferences_category_general">General</string>
-    <string name="preferences_item_delete_data">Delete browsing data</string>
-    <string name="preferences_item_delete_data_summary">Clear your saved bookmarks, history, and download entries</string>
-    <string name="preferences_item_manage_site_permissions">Manage site permissions</string>
-    <string name="preferences_item_download_opts">Download options</string>
-    <string name="preferences_item_histbook">History &amp; Bookmarks</string>
+    <string name="preferences_delete_data">Delete browsing data</string>
+    <string name="preferences_delete_data_summary">Clear your saved bookmarks, history, and download entries</string>
+    <string name="preferences_manage_site_permissions">Manage site permissions</string>
+    <string name="preferences_download_opts">Download options</string>
+    <string name="preferences_histbook">History &amp; Bookmarks</string>
     <string name="preferences_category_about">About</string>
-    <string name="preferences_item_app">@string/app_name</string>
-    <string name="preferences_item_app_summary">version 1.0.0</string>
-    <string name="preferences_item_copyright">Copyright © 2022 GianXD</string>
-    <string name="preferences_item_copyright_summary">Licensed under the BSD-3 Clause license</string>
+    <string name="preferences_app">@string/app_name</string>
+    <string name="preferences_app_summary">version 1.0.0</string>
+    <string name="preferences_copyright">Copyright © 2022 GianXD</string>
+    <string name="preferences_copyright_summary">Licensed under the BSD-3 Clause license</string>
     <string name="preferences_download_opts_location">Where to save</string>
     <string name="preferences_download_opts_hide_notif">Hide notification</string>
-    <string name="preferences_download_opts_hide_notif_summary_on">Download notifications will be hidden.</string>
     <string name="toast_delete_browsing_data">Browsing data has been deleted.</string>
     <string name="toast_sw_render_warn">Software rendering is enabled, performance may be slower.</string>
-    <string name="toast_restart_renderer">Restart the app to apply rendering changes.</string>
-    <string name="toast_warn_mozilla_renderer">Gecko render is still in-development, switch to Blink for a working web view.</string>
 </resources>
