--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="actionbar_preferences_download_opts_title">Download Options</string>
     <string name="content_description_toolbar_security">Security state of the website.</string>
     <string name="content_description_toolbar_favicon">The favicon of the website.</string>
-    <string name="content_description_toolbar_cancel">Cancel URL editing.</string>
+    <string name="content_description_toolbar_clear">Clear URL address.</string>
     <string name="content_description_toolbar_tabs">Switch browser tabs.</string>
     <string name="content_description_toolbar_menu">Show the browser menu.</string>
     <string name="dialog_delete_data_title">Completely delete browsing data?</string>
